@@ -1,4 +1,4 @@
 EBUILD cls-meta-10.4-r1.ebuild 2988 RMD160 042f931c6c1afa6103025275446336173aa70c10 SHA1 f830308a94db322d963c22a5100c8da049a31b44 SHA256 f763b6e9b07c0344b2baf7606944e4ec55d151adc5d85e354f37d5672b2aaa30
-EBUILD cls-meta-10.9.ebuild 1409 RMD160 616f4ed2ce88e7ddc5e5d18b31c76f0de7e35804 SHA1 b039afa53d0c6f230ead4f177a40cd47f5c8a3fd SHA256 ec8d35d1069f88fd845fe9d365cf89fe1d959acbe3023ec6bcfa4ea558741278
-MISC ChangeLog 2410 RMD160 c3d972245306dd1810ec18c2fe24c5144ba9f09b SHA1 1a96b1c64a9a553f5e588a738cc735423053a3e0 SHA256 a2cd2e8f1e7d71db865476b0d895ad636e13e6ccb207738e26cb58b9c958a9a9
+EBUILD cls-meta-10.9.ebuild 1407 RMD160 d6b4a1b4ed9c2cd3419105e378f4f4efd224d521 SHA1 9c2cdb6d906c841ed5d8fdca9a3cd718737e8f5e SHA256 69ca743f4744a122c14ea4d58c6676d66189998eeac2a8ae4d8913e364c7bbfe
+MISC ChangeLog 2530 RMD160 b578fdd047a1a0897717320871df3ccc21b9ada0 SHA1 f7b9768d668eab81471fa9365db8a9c1ce8b0092 SHA256 bdf347d639a6919061991d4f9896409620f34bd1bbceda32210c9b14f98d86e5
 MISC metadata.xml 257 RMD160 ba1d3308ea944e3f4e2d6c968edfc6abbc32261e SHA1 557e2138324d0aa8db3a282eeeadc88f5b061408 SHA256 6e5c9e82d9d3bdd7855fde47d4d5edaec61251e84a271bd08e64f17008d3e07a
