@@ -6,6 +6,6 @@ EBUILD cls-themes-10.0.1.ebuild 613 RMD160 c3b6f9cef3b2ecce778d39b5325d115140f3f
 EBUILD cls-themes-10.0.ebuild 460 RMD160 bab0eb9f62755d8c95be6d54467f592aacfa6ddc SHA1 47c0cbf19b2b4a4a449e93bf4781ebd91f381efe SHA256 95a2262076ebfc45b0a26e323d1da5b622855066abefc7d9021734eb522628f0
 EBUILD cls-themes-10.2-r1.ebuild 673 RMD160 e56afdc6e6629257cf705ab1f23ba6a7a8d1eeeb SHA1 93169224f1c924f830ddc4aa61f802dbd387c5b6 SHA256 cbfd7bebd69fa4d11ed83c1daef24789fc9223353b818f8ff6bcbae460b92206
 EBUILD cls-themes-10.4.ebuild 673 RMD160 e56afdc6e6629257cf705ab1f23ba6a7a8d1eeeb SHA1 93169224f1c924f830ddc4aa61f802dbd387c5b6 SHA256 cbfd7bebd69fa4d11ed83c1daef24789fc9223353b818f8ff6bcbae460b92206
-EBUILD cls-themes-10.9-r3.ebuild 793 RMD160 4202941eded4322dc1aa545c1898d826c5d838bb SHA1 aed2645a4659478003586ec933b0833d874b14a8 SHA256 c9b6ad581f45a224dab130c060bc13241ccd60130bff5e2e888327e2d66c9b4e
-MISC ChangeLog 907 RMD160 9305c3ce5f93cb2ee9f7365997929d2135724b63 SHA1 66199b361cb7cedb96d9ee58b0b5b2e1814511ba SHA256 37c3cc9e55e83fe66d04a562de38e7187e4e657d549aa27bf75238805aee19f2
+EBUILD cls-themes-10.9-r3.ebuild 791 RMD160 869bdc555aad2c8ebb02b52b259f52b42be60728 SHA1 26cf16199cc3cff350ddb544da2a21ddc57e1f3c SHA256 007aa5190a0400954500a6698828e6fc80ac080d63065a4b0f9a8ec85049e9c5
+MISC ChangeLog 1031 RMD160 57bf4ea443792ebef9f993cd5661f0f7f60497fe SHA1 bdec9d6b6d07c5b9a9a61c412a02ab98c184fb57 SHA256 04063f577881d1e1ae4009647cc2bafada8283de1ebe616fd9f476c447ae702d
 MISC metadata.xml 256 RMD160 4d2932b17e710e22b4ef8d10d4efa8e29ec2f59e SHA1 af0b67b9e0e87272e68c6017cb83ba23f6c86c27 SHA256 721c3fbe7e755146d6767cdd14cff57bf8474852588e99630f70bf5a058df759
