@@ -1,9 +1,0 @@
-=sys-apps/calculate-9999 amd64 x86
-
-~media-gfx/cls-themes-10.9 amd64 x86
-
-~x11-libs/qtermwidget-0.1 amd64 x86
-
-~app-misc/css-meta-10.9 amd64 x86
-~app-misc/cls-meta-10.9 amd64 x86
-
