@@ -1,39 +1,0 @@
-~sys-apps/calculate-1.4.0_p20100921 amd64 x86
-~sys-apps/calculate-1.4.0_p20100915 amd64 x86
-
-~sys-apps/calculate-builder-2.2.0.0_p20100921 amd64 x86
-
-~sys-apps/calculate-install-2.2.0.0_p20100921 amd64 x86
-~sys-apps/calculate-install-2.2.0.0_p20100915 amd64 x86
-~sys-apps/calculate-install-2.2.0.0_p20100902 amd64 x86
-
-~app-misc/calculate-install-gui-2.2.0.0_p20100921 amd64 x86
-~app-misc/calculate-install-gui-2.2.0.0_p20100910 amd64 x86
-~app-misc/calculate-install-gui-2.2.0.0_p20100902 amd64 x86
-
-
-~sys-apps/calculate-client-2.2.0.0_p20100921 amd64 x86
-~sys-apps/calculate-client-2.2.0.0_p20100915 amd64 x86
-~sys-apps/calculate-client-2.2.0.0_p20100901 amd64 x86
-~sys-apps/calculate-client-2.2.0.0_p20100825 amd64 x86
-
-~sys-apps/calculate-desktop-2.2.0.0_p20100921 amd64 x86
-~sys-apps/calculate-desktop-2.2.0.0_p20100915 amd64 x86
-~sys-apps/calculate-desktop-2.2.0.0_p20100901 amd64 x86
-~sys-apps/calculate-desktop-2.2.0.0_p20100819 amd64 x86
-
-~sys-apps/calculate-templates-2.2.0.0_p20100921 amd64 x86
-~sys-apps/calculate-templates-2.2.0.0_p20100915 amd64 x86
-~sys-apps/calculate-templates-2.2.0.0_p20100902 amd64 x86
-~sys-apps/calculate-templates-2.2.0.0_p20100826 amd64 x86
-
-~sys-apps/calculate-lib-2.2.0.0_p20100921 amd64 x86
-~sys-apps/calculate-lib-2.2.0.0_p20100915 amd64 x86
-~sys-apps/calculate-lib-2.2.0.0_p20100902 amd64 x86
-~sys-apps/calculate-lib-2.2.0.0_p20100826 amd64 x86
-
-~sys-kernel/calculate-sources-2.6.34.4 amd64 x86
-~sys-kernel/calculate-sources-2.6.35.5 amd64 x86
-~app-office/openoffice-3.2.1 amd64 x86
-
-
