@@ -54,6 +54,8 @@ media-video/nvidia-settings amd64 x86
 
 ~app-dicts/ispell-pt-br-2.4 amd64 x86
 
+~x11-libs/qtermwidget-0.1 amd64 x86
+
 ~app-emulation/virtualbox-bin-3.2.8 amd64 x86
 ~app-emulation/virtualbox-guest-additions-3.2.8 amd64 x86
 ~app-emulation/virtualbox-modules-3.2.8 amd64 x86
@@ -61,4 +63,15 @@ media-video/nvidia-settings amd64 x86
 ~app-emulation/virtualbox-ose-additions-3.2.8 amd64 x86
 ~x11-drivers/xf86-input-virtualbox-3.2.8 amd64 x86
 ~x11-drivers/xf86-video-virtualbox-3.2.8 amd64 x86
+
+~sys-apps/calculate-1.4.0_p20100921 amd64 x86
+~sys-apps/calculate-builder-2.2.0.0_p20100921 amd64 x86
+~sys-apps/calculate-install-2.2.0.0_p20100921 amd64 x86
+~app-misc/calculate-install-gui-2.2.0.0_p20100921 amd64 x86
+~sys-apps/calculate-client-2.2.0.0_p20100921 amd64 x86
+~sys-apps/calculate-desktop-2.2.0.0_p20100921 amd64 x86
+~sys-apps/calculate-templates-2.2.0.0_p20100921 amd64 x86
+~sys-apps/calculate-lib-2.2.0.0_p20100921 amd64 x86
+~sys-kernel/calculate-sources-2.6.35.5 amd64 x86
+~app-office/openoffice-3.2.1 amd64 x86
 
