@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  cls-themes-10.9-r3.ebuild:
+  stabled cls-themes-10.9-r3
+
 *cls-themes-10.9-r3 (06 Sep 2010)
 
   06 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
