@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  cls-meta-10.9.ebuild:
+  stable cls-meta-10.9.ebuild
+
 *cls-meta-10.9 (22 Sep 2010)
 
   22 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
